fix: accessibility concerns (contrast, labels)

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -30,8 +30,8 @@ button {
   --light-gray: #e7e7ea;
   --soft-gray: #d0d0d3;
   --mid-gray: #a0a0a3;
-  --dark-gray: #777779;
-  --black-gray: #404042;
+  --dark-gray: #656567;
+  --black-gray: #303042;
   --black: #19191c;
   --slate-blue: #5a4ba8;
   --light-slate-blue: #a18edf;
@@ -184,6 +184,7 @@ h3 {
 }
 
 /* Styling by section*/
+
 /* Header */
 
 #hero {
@@ -245,6 +246,7 @@ h3 {
     gap: 0.75rem;
   }
 }
+
 
 /* Portfolio */
 
@@ -351,6 +353,11 @@ h3 {
   background-color: var(--accent-color);
   cursor: default;
   text-transform: uppercase;
+  transition: transform 0.1s ease-out;
+}
+
+.skill-tag:hover {
+  transform: translateY(-2px);
 }
 
 .project-links {
@@ -365,6 +372,7 @@ h3 {
   color: var(--text-color-secondary);
   font-weight: 500;
   font-size: var(--step--1);
+  transition: color 0.3s ease-out;
 
   &:hover {
     color: var(--accent-color);
@@ -690,6 +698,17 @@ h3 {
   to {
     transform: translateY(0px);
     opacity: 1;
+  }
+}
+
+@keyframes pulseDown {
+  0%,
+  100% {
+    transform: translateY(0px);
+  }
+
+  50% {
+    transform: translateY(12px);
   }
 }
 
